--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>Sunderland Head and Neck Emergency Radiology Course<h1/>
+<html>
+<head>
+<style>
+body {background-color: white;}
+h1   {color: blue;}
+p    {color: pink;}
+</style>
+</head>
+<body><h1>Sunderland Head and Neck Emergency Radiology Course<h1/>
