--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <html>
 <head>
 <style>
-body {background-color: white;}
-h1   {color: blue;}
-p    {color: pink;}
+h1 {
+    color: skyblue;
+    font-family: thonburi;
+    font-size: 300%;
+}
+p  {
+    color: pink;
+    font-family: thonburi;
+    font-size: 160%;
+}
 </style>
 </head>
-<body><h1>Sunderland Head and Neck Emergency Radiology Course<h1/>
+<body>
+  <h1>Sunderland Radiology Course<h1/>
