--- a/index.html
+++ b/index.html
@@ -14,4 +14,4 @@ p  {
 </style>
 </head>
 <body>
-  <h1>Sunderland Radiology Course<h1/>
+  <h1>Sunderland Head and Neck Emergency Radiology Course<h1/>
