--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!-- Compiled and minified CSS -->
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css" rel="stylesheet"><!-- Compiled and minified JavaScript -->
-
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css" rel="stylesheet">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js">
 	</script>
 	<title></title>
 </head>
 <body>
-<div class="section" id="index-banner">
-  <div class="container">
-    <div class="row">
-      <div class="col s12">
-        <h1 class="header center-on-small-only">Sunderland</h1>
-        <h4 class="light red-text text-lighten-4 center-on-small-only">Head and Neck Emergency Radiology course</h4>
-      </div>
-    </div>
-  </div>
-</div>
+	<div class="section red lighten-1">
+		<div class="container">
+			<div class="row">
+				<div class="col s12">
+					<h1 class="header center-on-small-only">Sunderland Royal Hospital</h1>
+					<h4 class="light red-text text-lighten-4 center-on-small-only">Head and Neck Emergency Radiology course</h4>
+				</div>
+			</div>
+		</div>
+	</div>
 	<p>Learn to interpret imaging in</p>
 	<p></p>
 </body>
