--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	<title></title>
 </head>
 <body>
-	<div class="section red lighten-1">
-		<div class="container">
+	<div class = "container"><!-- this tells materialise it can fill the page -->
+		<div class="section red lighten-1"><!-- banner at top -->
 			<div class="row">
 				<div class="col s12">
-					<h1 class="header center-on-small-only">Sunderland Royal Hospital</h1>
+					<h1 class="header light center-on-small-only">Sunderland Royal Hospital</h1>
 					<h4 class="light red-text text-lighten-4 center-on-small-only">Head and Neck Emergency Radiology course</h4>
 				</div>
 			</div>
