--- a/index.html
+++ b/index.html
@@ -19,6 +19,29 @@
 	</div>
 	<div class = "container">
 		<div class = "row">
+			<div = "col s4">
+				<i class = "materialize-icons>camera_roll</i>
+				<h4>Learn to interpret imaging</h4>
+				<p class = "light">
+					Imagining - all the imaging - I mean can you imagine.
+				</p>
+			</div>
+			
+			<div = "col s4">
+				<i class = "materialize-icons>camera_roll</i>
+				<h4>Learn to interpret imaging</h4>
+				<p class = "light">
+					Imagining - all the imaging - I mean can you imagine.
+				</p>
+			</div>
+			
+			<div = "col s4">
+				<i class = "materialize-icons>camera_roll</i>
+				<h4>Learn to interpret imaging</h4>
+				<p class = "light">
+					Imagining - all the imaging - I mean can you imagine.
+				</p>
+			</div>
 			
 		</div>
 	</div>
