--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<div class = "container">
 		<div class = "row">
 			<div = "col s4">
-				<i class = "materialize-icons>camera_roll</i>
+				<i class = "materialize-icons">camera_roll</i>
 				<h4>Learn to interpret imaging</h4>
 				<p class = "light">
 					Imagining - all the imaging - I mean can you imagine.
@@ -28,7 +28,7 @@
 			</div>
 			
 			<div = "col s4">
-				<i class = "materialize-icons>camera_roll</i>
+				<i class = "materialize-icons">camera_roll</i>
 				<h4>Learn to interpret imaging</h4>
 				<p class = "light">
 					Imagining - all the imaging - I mean can you imagine.
@@ -36,7 +36,7 @@
 			</div>
 			
 			<div = "col s4">
-				<i class = "materialize-icons>camera_roll</i>
+				<i class = "materialize-icons">camera_roll</i>
 				<h4>Learn to interpret imaging</h4>
 				<p class = "light">
 					Imagining - all the imaging - I mean can you imagine.
