--- a/index.html
+++ b/index.html
@@ -20,26 +20,26 @@
 	<div class = "container">
 		<div class = "row">
 			<div = "col s4">
-				<i class = "materialize-icons">camera_roll</i>
+				<i class = "materialize-icons">theatres</i>
 				<h4>Learn to interpret imaging</h4>
 				<p class = "light">
-					Imagining - all the imaging - I mean can you imagine.
+					The course will cover imaging on the head and neck; and the head also there will be neck.
 				</p>
 			</div>
 			
 			<div = "col s4">
-				<i class = "materialize-icons">camera_roll</i>
-				<h4>Learn to interpret imaging</h4>
+				<i class = "materialize-icons">warning</i>
+				<h4>Understand common errors</h4>
 				<p class = "light">
-					Imagining - all the imaging - I mean can you imagine.
+					Errors that are common can be avoided by learning from the mistakes of others.
 				</p>
 			</div>
 			
 			<div = "col s4">
-				<i class = "materialize-icons">camera_roll</i>
-				<h4>Learn to interpret imaging</h4>
+				<i class = "materialize-icons">forum</i>
+				<h4>Discussions</h4>
 				<p class = "light">
-					Imagining - all the imaging - I mean can you imagine.
+					You'll be head and shoulders above the rest.
 				</p>
 			</div>
 			
