--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title></title>
 </head>
 <body>
-	<div class="section red lighten-1"><!-- banner at top -->
+	<div class="section red-text light text-lighten-4"><!-- banner at top -->
 		<div class = "container">
 			<div class="row">
 				<div class="col s12">
@@ -20,7 +20,7 @@
 	<div class = "container">
 		<div class = "row">
 			<div = "col s4">
-				<i class = "materialize-icons">theatres</i>
+				<i class = "material-icons">camera_roll</i>
 				<h4>Learn to interpret imaging</h4>
 				<p class = "light">
 					The course will cover imaging on the head and neck; and the head also there will be neck.
@@ -28,7 +28,7 @@
 			</div>
 			
 			<div = "col s4">
-				<i class = "materialize-icons">warning</i>
+				<i class = "material-icons">warning</i>
 				<h4>Understand common errors</h4>
 				<p class = "light">
 					Errors that are common can be avoided by learning from the mistakes of others.
@@ -36,7 +36,7 @@
 			</div>
 			
 			<div = "col s4">
-				<i class = "materialize-icons">forum</i>
+				<i class = "material-icons">forum</i>
 				<h4>Discussions</h4>
 				<p class = "light">
 					You'll be head and shoulders above the rest.
