--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html>
 <head>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js">
 	</script>
 	<title></title>
 </head>
 <body>
-	<div class="section red-text light text-lighten-4"><!-- banner at top -->
+	<div class="section red"><!-- banner at top -->
 		<div class = "container">
 			<div class="row">
 				<div class="col s12">
-					<h1 class="header light center-on-small-only">Sunderland Royal Hospital</h1>
+					<h1 class="header light red-text text-lighten-1 center-on-small-only">Sunderland Royal Hospital</h1>
 					<h4 class="light red-text text-lighten-4 center-on-small-only">Head and Neck Emergency Radiology course</h4>
 				</div>
 			</div>
