--- a/index.html
+++ b/index.html
@@ -12,37 +12,39 @@
 		<div class = "container">
 			<div class="row">
 				<div class="col s12">
-					<h1 class="header light red-text text-lighten-1 center-on-small-only">Sunderland Royal Hospital</h1>
-					<h4 class="light red-text text-lighten-4 center-on-small-only">Head and Neck Emergency Radiology course</h4>
+					<h1 class="header light red-text text-lighten-4 center-on-small-only">Sunderland Royal Hospital</h1>
+					<h4 class="light red-text text-lighten-3 center-on-small-only">Head and Neck Emergency Radiology course</h4>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class = "row">
-		<div = "col s4">
-			<i class = "material-icons">camera_roll</i>
-			<h4>Learn to interpret imaging</h4>
-			<p class = "light">
-				The course will cover imaging on the head and neck; and the head also there will be neck.
-			</p>
-		</div>
+	<div class = "container">
+		<div class = "row">
+			<div = "col s4">
+				<i class = "material-icons">camera_roll</i>
+				<p>Learn to interpret imaging</p>
+				<p class = "light">
+					The course will cover imaging on the head and neck; and the head also there will be neck.
+				</p>
+			</div>
 
-		<div = "col s4">
-			<i class = "material-icons">warning</i>
-			<h4>Understand common errors</h4>
-			<p class = "light">
-				Errors that are common can be avoided by learning from the mistakes of others.
-			</p>
-		</div>
+			<div = "col s4">
+				<i class = "material-icons">warning</i>
+				<p>Understand common errors</p>
+				<p class = "light">
+					Errors that are common can be avoided by learning from the mistakes of others.
+				</p>
+			</div>
 
-		<div = "col s4">
-			<i class = "material-icons">forum</i>
-			<h4>Discussions</h4>
-			<p class = "light">
-				You'll be head and shoulders above the rest.
-			</p>
-		</div>
+			<div = "col s4">
+				<i class = "material-icons">forum</i>
+				<p>Discussions</p>
+				<p class = "light">
+					You'll be head and shoulders above the rest.
+				</p>
+			</div>
 
+		</div>
 	</div>
 	<p>Learn to interpret imaging in</p>
 	<p></p>
