--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
 	</div>
 	<div class = "container">
 		<div class = "row">
-			<div = "col s4">
-				<i class = "material-icons">camera_roll</i>
-				<p>Learn to interpret imaging</p>
+			<div class = "col s4">
+				<i class = "large green material-icons">camera_roll</i>
+				<h4>Learn to interpret imaging</h4>
 				<p class = "light">
 					The course will cover imaging on the head and neck; and the head also there will be neck.
 				</p>
 			</div>
 
-			<div = "col s4">
-				<i class = "material-icons">warning</i>
-				<p>Understand common errors</p>
+			<div class = "col s4">
+				<i class = "large green material-icons">warning</i>
+				<h4>Understand common errors</h4>
 				<p class = "light">
 					Errors that are common can be avoided by learning from the mistakes of others.
 				</p>
 			</div>
 
-			<div = "col s4">
-				<i class = "material-icons">forum</i>
-				<p>Discussions</p>
+			<div class = "col s4">
+				<i class = "large green material-icons">forum</i>
+				<h4>Discussions</h4>
 				<p class = "light">
 					You'll be head and shoulders above the rest.
 				</p>
