--- a/index.html
+++ b/index.html
@@ -21,24 +21,24 @@
 	<div class = "container">
 		<div class = "row">
 			<div class = "col s4">
-				<i class = "large green material-icons">camera_roll</i>
-				<h4>Learn to interpret imaging</h4>
+				<i class = "large blue-text material-icons">camera_roll</i>
+				<h6>Learn to interpret imaging</h6>
 				<p class = "light">
 					The course will cover imaging on the head and neck; and the head also there will be neck.
 				</p>
 			</div>
 
 			<div class = "col s4">
-				<i class = "large green material-icons">warning</i>
-				<h4>Understand common errors</h4>
+				<i class = "large blue-text material-icons">warning</i>
+				<h6>Understand common errors</h6>
 				<p class = "light">
 					Errors that are common can be avoided by learning from the mistakes of others.
 				</p>
 			</div>
 
 			<div class = "col s4">
-				<i class = "large green material-icons">forum</i>
-				<h4>Discussions</h4>
+				<i class = "large blue-text material-icons">forum</i>
+				<h6>Discussions</h6>
 				<p class = "light">
 					You'll be head and shoulders above the rest.
 				</p>
