--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div class = "container">
 		<div class = "row">
 			<div class = "col s4">
-				<i class = "large blue-text material-icons">camera_roll</i>
+				<i class = "center blue-text material-icons">camera_roll</i>
 				<h6>Learn to interpret imaging</h6>
 				<p class = "light">
 					The course will cover imaging on the head and neck; and the head also there will be neck.
@@ -29,7 +29,7 @@
 			</div>
 
 			<div class = "col s4">
-				<i class = "large blue-text material-icons">warning</i>
+				<i class = "center blue-text material-icons">warning</i>
 				<h6>Understand common errors</h6>
 				<p class = "light">
 					Errors that are common can be avoided by learning from the mistakes of others.
@@ -37,7 +37,7 @@
 			</div>
 
 			<div class = "col s4">
-				<i class = "large blue-text material-icons">forum</i>
+				<i class = "center blue-text material-icons">forum</i>
 				<h6>Discussions</h6>
 				<p class = "light">
 					You'll be head and shoulders above the rest.
