--- a/index.html
+++ b/index.html
@@ -20,24 +20,30 @@
 	</div>
 	<div class = "container">
 		<div class = "row">
-			<div class = "col s4 center">
-				<i class = "blue-text material-icons">camera_roll</i>
+			<div class = "col s4">
+				<div class = "center">
+					<i class = "blue-text material-icons">camera_roll</i>
+				</div>
 				<h6>Learn to interpret imaging</h6>
 				<p class = "light">
 					The course will cover imaging on the head and neck; and the head also there will be neck.
 				</p>
 			</div>
 
-			<div class = "col s4 center">
-				<i class = "blue-text material-icons">warning</i>
+			<div class = "col s4">
+				<div class = "center">
+					<i class = "blue-text material-icons">warning</i>
+				</div>
 				<h6>Understand common errors</h6>
 				<p class = "light">
 					Errors that are common can be avoided by learning from the mistakes of others.
 				</p>
 			</div>
 
-			<div class = "col s4 center">
-				<i class = "blue-text material-icons">forum</i>
+			<div class = "col s4">
+				<div class = "center">
+					<i class = "blue-text material-icons">forums</i>
+				</div>
 				<h6>Discussions</h6>
 				<p class = "light">
 					You'll be head and shoulders above the rest.
