--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 			</div>
 		</div>
 	</div>
+	<br>
+	<br>
 	<div class = "container">
 		<div class = "row">
 			<div class = "col s4">
@@ -52,7 +54,6 @@
 
 		</div>
 	</div>
-	<p>Learn to interpret imaging in</p>
-	<p></p>
+	<a class="waves-effect waves-light btn" href = "/assets/pdf/sss"><i class="material-icons left">description</i>Download matierials</a>
 </body>
 </html>
