--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 
 		</div>
 	</div>
-	<a class="waves-effect waves-light btn" href = "/assets/pdf/sss"><i class="material-icons left">description</i>Download matierials</a>
+	<div class = "center">
+		<a class="waves-effect waves-light btn" href = "/assets/pdf/sss"><i class="material-icons left">description</i>Download matierials</a>
+	</div<
 </body>
 </html>
