--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		</div>
 	</div>
 	<div class = "center">
-		<a class="waves-effect waves-light btn" href = "/assets/pdf/sss"><i class="material-icons left">description</i>Download matierials</a>
+		<a class="waves-effect waves-light btn" href = "/assets/pdf/sss"><i class="material-icons left">description</i>Download materials</a>
 	</div<
 </body>
 </html>
