--- a/index.html
+++ b/index.html
@@ -27,14 +27,20 @@
 					<i class = "blue-text material-icons">camera_roll</i>
 				</div>
 				<h6>Learn to interpret imaging</h6>
-				<p class = "light">
-					The course will cover imaging on the head and neck; and the head also there will be neck.
-				</p>
+				<ul>
+					<li>Pharyngeal emergencies</li>
+					<li>Otological + Temporal bone emergencies</li>
+					<li>Sinonasal emergencies</li>
+					<li>Facial trauma</li>
+					<li>Vascular + emergencies</li>
+					<li>Neurological complication of ENT emergencies</li>
+					<li>Dental + Salivary emergencies</li>
+				</ul>
 			</div>
 
 			<div class = "col s4">
 				<div class = "center">
-					<i class = "blue-text material-icons">warning</i>
+					<i class = "blue-text material-icons">room</i>
 				</div>
 				<h6>Understand common errors</h6>
 				<p class = "light">
