--- a/index.html
+++ b/index.html
@@ -27,15 +27,13 @@
 					<i class = "blue-text material-icons">camera_roll</i>
 				</div>
 				<h6>Learn to interpret imaging</h6>
-				<ul>
-					<li>Pharyngeal emergencies</li>
-					<li>Otological + Temporal bone emergencies</li>
-					<li>Sinonasal emergencies</li>
-					<li>Facial trauma</li>
-					<li>Vascular + emergencies</li>
-					<li>Neurological complication of ENT emergencies</li>
-					<li>Dental + Salivary emergencies</li>
-				</ul>
+				<p>Pharyngeal emergencies</p>
+				<p>Otological + Temporal bone emergencies</p>
+				<p>Sinonasal emergencies</p>
+				<p>Facial trauma</p>
+				<p>Vascular + emergencies</p>
+				<p>Neurological complication of ENT emergencies</p>
+				<p>Dental + Salivary emergencies</p>
 			</div>
 
 			<div class = "col s4">
