--- a/index.html
+++ b/index.html
@@ -27,33 +27,42 @@
 					<i class = "blue-text material-icons">camera_roll</i>
 				</div>
 				<h6>Learn to interpret imaging</h6>
-				<p>Pharyngeal emergencies</p>
-				<p>Otological + Temporal bone emergencies</p>
-				<p>Sinonasal emergencies</p>
-				<p>Facial trauma</p>
-				<p>Vascular + emergencies</p>
-				<p>Neurological complication of ENT emergencies</p>
-				<p>Dental + Salivary emergencies</p>
+				<p class = "light">Pharyngeal emergencies<br>
+				Otological + Temporal bone emergencies<br>
+				Sinonasal emergencies<br>
+				Facial trauma<br>
+				Vascular + emergencies<br>
+				Neurological complication of ENT emergencies<br>
+				Dental + Salivary emergencies</p>
 			</div>
 
 			<div class = "col s4">
 				<div class = "center">
-					<i class = "blue-text material-icons">room</i>
+					<i class = "blue-text material-icons">today</i>
 				</div>
-				<h6>Understand common errors</h6>
+				<h6>Tuesday 26th Sept 2017</h6>
 				<p class = "light">
-					Errors that are common can be avoided by learning from the mistakes of others.
+					<i class = "tiny material-icons left">schedule</i>0800 - 1700<br>
+					<i class = "tiny material-icons left">room</i><a href = "https://goo.gl/maps/Viaoh4mJ2RT2">Education Center, Sunderland Royal Hospital, Kayll Road, SR4 7TP</a><br>
+					<i class = "tiny material-icons left">email</i><a href = "mailto:SRHRadiologycourse@gmail.com"></a><br>
 				</p>
 			</div>
 
 			<div class = "col s4">
 				<div class = "center">
-					<i class = "blue-text material-icons">forums</i>
+					<i class = "blue-text material-icons">recent_actors</i>
 				</div>
-				<h6>Discussions</h6>
+				<h6>Facults</h6>
 				<p class = "light">
-					You'll be head and shoulders above the rest.
+					Miss H Cocks, Dr Y Mentias, Dr I Zammit, Dr Joanna Dixon, Dr A Adbel-Galil, Dr G Buneao, Dr S England, Mr T Bradish
 				</p>
+			</div>
+			
+			<div class = "col s12">
+				Course fee is £50 per person<br>
+				Lunch and refreshments are included
+				This course is aimed at consultants in ENT and Radiology
+				Attendance provides 6 CPD credits in accordance with the CPD schemes of ENTUK and the Royal College of Radiologists
 			</div>
 
 		</div>
