--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<p class = "light">
 					<i class = "tiny material-icons left">schedule</i>0800 - 1700<br>
 					<i class = "tiny material-icons left">room</i><a href = "https://goo.gl/maps/Viaoh4mJ2RT2">Education Center, Sunderland Royal Hospital, Kayll Road, SR4 7TP</a><br>
-					<i class = "tiny material-icons left">email</i><a href = "mailto:SRHRadiologycourse@gmail.com"></a><br>
+					<i class = "tiny material-icons left">email</i><a href = "mailto:SRHRadiologycourse@gmail.com">SRHRadiologycourse@gmail.com</a><br>
 				</p>
 			</div>
 
@@ -52,16 +52,17 @@
 				<div class = "center">
 					<i class = "blue-text material-icons">recent_actors</i>
 				</div>
-				<h6>Facults</h6>
+				<h6>Faculty</h6>
 				<p class = "light">
 					Miss H Cocks, Dr Y Mentias, Dr I Zammit, Dr Joanna Dixon, Dr A Adbel-Galil, Dr G Buneao, Dr S England, Mr T Bradish
 				</p>
 			</div>
-			
+			<br>
+			<br>
 			<div class = "col s12">
 				Course fee is £50 per person<br>
-				Lunch and refreshments are included
-				This course is aimed at consultants in ENT and Radiology
+				Lunch and refreshments are included<br>
+				This course is aimed at consultants in ENT and Radiology<br>
 				Attendance provides 6 CPD credits in accordance with the CPD schemes of ENTUK and the Royal College of Radiologists
 			</div>
 
