--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			</div>
 			<br>
 			<br>
-			<div class = "col s12">
+			<div class = "col s8 push-s4">
 				Course fee is £50 per person<br>
 				Lunch and refreshments are included<br>
 				This course is aimed at consultants in ENT and Radiology<br>
