--- a/index.html
+++ b/index.html
@@ -60,16 +60,18 @@
 			<br>
 			<br>
 			<div class = "col s8">
-				Course fee is £50 per person<br>
-				Lunch and refreshments are included<br>
-				This course is aimed at consultants in ENT and Radiology<br>
-				Attendance provides 6 CPD credits in accordance with the CPD schemes of ENTUK and the Royal College of Radiologists
+				<p class = "green-text text-darken-3">
+					Course fee is £50 per person<br>
+					Lunch and refreshments are included<br>
+					This course is aimed at consultants in ENT and Radiology<br>
+					Attendance provides 6 CPD credits in accordance with the CPD schemes of ENTUK and the Royal College of Radiologists
+				</p>
 			</div>
 
 		</div>
 	</div>
 	<div class = "center">
-		<a class="waves-effect waves-light btn" href = "/assets/pdf/sss"><i class="material-icons left">description</i>Download materials</a>
+		<a class="waves-effect waves-light btn" href = "/assets/pdf/poster4.pdf"><i class="material-icons left">description</i>Download poster</a>
 	</div<
 </body>
 </html>
