--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<br>
 			<br>
 			<div class = "col s8">
-				<p class = "green-text text-darken-3">
+				<p class = "red-text text-darken-3">
 					Course fee is £50 per person<br>
 					Lunch and refreshments are included<br>
 					This course is aimed at consultants in ENT and Radiology<br>
