--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<br>
 	<div class = "container">
 		<div class = "row">
-			<div class = "col s4">
+			<div class = "col m4 s12">
 				<div class = "center">
 					<i class = "blue-text material-icons">camera_roll</i>
 				</div>
@@ -36,7 +36,7 @@
 				Dental + Salivary emergencies</p>
 			</div>
 
-			<div class = "col s4">
+			<div class = "col m4 s12">
 				<div class = "center">
 					<i class = "blue-text material-icons">today</i>
 				</div>
@@ -48,7 +48,7 @@
 				</p>
 			</div>
 
-			<div class = "col s4">
+			<div class = "col m4 s12">
 				<div class = "center">
 					<i class = "blue-text material-icons">recent_actors</i>
 				</div>
@@ -59,7 +59,7 @@
 			</div>
 			<br>
 			<br>
-			<div class = "col s8">
+			<div class = "col m8 s12">
 				<p class = "red-text text-darken-3">
 					Course fee is £50 per person<br>
 					Lunch and refreshments are included<br>
