--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class = "container">
 			<div class="row">
 				<div class="col s12">
-					<h1 class="header light red-text text-lighten-4 center-on-small-only">Sunderland Royal Hospital</h1>
+					<h1 class="header light red-text text-lighten-4 center-on-small-only">SRH</h1>
 					<h4 class="light red-text text-lighten-3 center-on-small-only">Head and Neck Emergency Radiology course</h4>
 				</div>
 			</div>
