--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
 			<br>
 			<br>
 			<div class = "col m8 s12">
-				<p class = "red-text text-darken-3">
+				<div class = "center">
+					<i class = "blue-text material-icons">info_outline</i>
+				</div>
+				<p class = "blue-text text-darken-3">
 					Course fee is £50 per person<br>
 					Lunch and refreshments are included<br>
 					This course is aimed at consultants in ENT and Radiology<br>
