--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 			</div>
 			<br>
 			<br>
-			<div class = "col m8 s12">
+			<div class = "col m8 s12 blue lighten-5">
 				<div class = "center">
 					<i class = "blue-text material-icons">info_outline</i>
 				</div>
-				<p class = "blue-text text-darken-3">
+				<p class = "light ">
 					Course fee is £50 per person<br>
 					Lunch and refreshments are included<br>
 					This course is aimed at consultants in ENT and Radiology<br>
