--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			</div>
 			<br>
 			<br>
-			<div class = "col m8 s12 blue lighten-5">
+			<div class = "col m8 s12 blue lighten-5"><br>
 				<div class = "center">
 					<i class = "blue-text material-icons">info_outline</i>
 				</div>
