--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				</div>
 				<h6>Faculty</h6>
 				<p class = "light">
-					Miss H Cocks, Dr Y Mentias, Dr I Zammit, Dr Joanna Dixon, Dr A Adbel-Galil, Dr G Buneao, Dr S England, Mr T Bradish
+					Miss H Cocks, Dr Y Mentias, Dr I Zammit, Dr Joanna Dixon, Dr A Abdel-Galil, Dr G Bunea, Dr S England, Mr T Bradish
 				</p>
 			</div>
 			<br>
