--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js">
 	</script>
-	<title></title>
+	<title>SRH Head and Neck Emergency Radiology course<</title>
+		<!-- this is to make the link look nice when shared, e.g. WhatsApp, Facebook -->
+	<meta property="og:site_name" content="SRH Head and Neck Emergency Radiology course">
+	<meta property="og:title" content="SRH Head and Neck Emergency Radiology course" />
+	<meta property="og:description" content="One day course for consultants in ENT and Radiology" />
+	<meta property="og:image" itemprop="image" content="/assets/img/smallsquarelogo.jpg">
+	<meta property="og:type" content="website" />
+	<meta property="og:updated_time" content="1497688886" />
 </head>
 <body>
 	<div class="section red"><!-- banner at top -->
