--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta property="og:site_name" content="SRH Head and Neck Emergency Radiology course">
 	<meta property="og:title" content="SRH Head and Neck Emergency Radiology course" />
 	<meta property="og:description" content="One day course for consultants in ENT and Radiology" />
-	<meta property="og:image" itemprop="image" content="/assets/img/smallsquarelogo.jpg">
+	<meta property="og:image" itemprop="image" content="http://srhradiologycourse.com/assets/img/smallsquarelogo.jpg">
 	<meta property="og:type" content="website" />
 	<meta property="og:updated_time" content="1497688886" />
 </head>
