--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<meta property="og:title" content="SRH Head and Neck Emergency Radiology course" />
 	<meta property="og:description" content="One day course for consultants in ENT and Radiology" />
 	<meta property="og:image" itemprop="image" content="http://srhradiologycourse.com/assets/img/smallsquarelogo.jpg">
+	<meta property="og:url" content="http://srhradiologycourse.com/" />
 	<meta property="og:type" content="website" />
 	<meta property="og:updated_time" content="1497688886" />
 </head>
