--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js">
 	</script>
-	<title>SRH Head and Neck Emergency Radiology course<</title>
-		<!-- this is to make the link look nice when shared, e.g. WhatsApp, Facebook -->
+	<title>SRH Head and Neck Emergency Radiology course</title>
+	<!-- this is to make the link look nice when shared, e.g. WhatsApp, Facebook -->
 	<meta property="og:site_name" content="SRH Head and Neck Emergency Radiology course">
 	<meta property="og:title" content="SRH Head and Neck Emergency Radiology course" />
 	<meta property="og:description" content="One day course for consultants in ENT and Radiology" />
@@ -15,6 +15,7 @@
 	<meta property="og:url" content="http://srhradiologycourse.com/" />
 	<meta property="og:type" content="website" />
 	<meta property="og:updated_time" content="1497688886" />
+	<!-- end of open graph elements -->
 </head>
 <body>
 	<div class="section red"><!-- banner at top -->
