--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!-- this is to make the link look nice when shared, e.g. WhatsApp, Facebook -->
 	<meta property="og:site_name" content="SRH Head and Neck Emergency Radiology course">
 	<meta property="og:title" content="SRH Head and Neck Emergency Radiology course" />
-	<meta property="og:description" content="One day course for consultants in ENT and Radiology" />
+	<meta property="og:description" content="A One day course for Consultants and trainees in ENT and Radiology to learn to interptet imaging " />
 	<meta property="og:image" itemprop="image" content="http://srhradiologycourse.com/assets/img/smallsquarelogo.jpg">
 	<meta property="og:url" content="http://srhradiologycourse.com/" />
 	<meta property="og:type" content="website" />
@@ -64,7 +64,7 @@
 				</div>
 				<h6>Faculty</h6>
 				<p class = "light">
-					Miss H Cocks, Dr Y Mentias, Dr I Zammit, Dr Joanna Dixon, Dr A Abdel-Galil, Dr G Bunea, Dr S England, Mr T Bradish
+					Miss H Cocks, Dr Y Mentias, Dr I Zammit, Dr J Dixon, Dr A Abdel-Galil, Dr G Bunea, Dr S England, Mr T Bradish
 				</p>
 			</div>
 			<br>
