--- a/index.html
+++ b/index.html
@@ -86,5 +86,9 @@
 	<div class = "center">
 		<a class="waves-effect waves-light btn" href = "/assets/pdf/poster4.pdf"><i class="material-icons left">description</i>Download poster</a>
 	</div<
+		</div>
+	<div class = "center">
+		<a class="waves-effect waves-light btn" href = "/assets/pdf/poster4.pdf"><i class="material-icons left">description</i>Download poster</a>
+	</div<
 </body>
 </html>
