--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	</div<
 		</div>
 	<div class = "center">
-		<a class="waves-effect waves-light btn" href = "/assets/pdf/poster4.pdf"><i class="material-icons left">description</i>Download poster</a>
+		<a class="waves-effect waves-light btn" href = "/assets/Application form Sept 2017.doc"><i class="material-icons left">description</i>Download Application form</a>
 	</div<
 </body>
 </html>
