--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 				<div class = "center">
 					<i class = "blue-text material-icons">camera_roll</i>
 				</div>
-				<h6>Learn to interpret imaging</h6>
+				<h6>A one day course for ENT and radiologists to teach you how to interpret imaging in key head and neck emergencies</h6>
 				<p class = "light">Pharyngeal emergencies<br>
 				Otological + Temporal bone emergencies<br>
 				Sinonasal emergencies<br>
 				Facial trauma<br>
-				Vascular + emergencies<br>
+				Vascular emergencies<br>
 				Neurological complication of ENT emergencies<br>
 				Dental + Salivary emergencies</p>
 			</div>
