--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<div class = "center">
 					<i class = "blue-text material-icons">camera_roll</i>
 				</div>
-				<h6>A one day course for ENT and radiologists to teach you how to interpret imaging in key head and neck emergencies</h6>
+				<h6>A one day course for Consultants and trainees in ENT and radiology to teach you how to interpret imaging in key head and neck emergencies</h6>
 				<p class = "light">Pharyngeal emergencies<br>
 				Otological + Temporal bone emergencies<br>
 				Sinonasal emergencies<br>
