--- a/index.html
+++ b/index.html
@@ -37,13 +37,20 @@
 					<i class = "blue-text material-icons">camera_roll</i>
 				</div>
 				<h6>A one day course for Consultants and trainees in ENT and radiology to teach you how to interpret imaging in key head and neck emergencies</h6>
-				<p class = "light">Pharyngeal emergencies<br>
-				Otological + Temporal bone emergencies<br>
-				Sinonasal emergencies<br>
-				Facial trauma<br>
-				Vascular emergencies<br>
-				Neurological complication of ENT emergencies<br>
-				Dental + Salivary emergencies</p>
+				<p class = "light">0800-0845 Registration<br>
+					0845-0900 Welcome and Introductions<br>
+					0900-0945 ENT emergencies - A Clinical perspective<br>
+					0945-1030 Pharyngeal emergencies<br>
+					1030-1100 Coffee<br>
+					1100-1145 Temporal bone emergencies<br>
+					1145-1230 Nasal and paranasal emergencies<br>
+					1230-1330 Lunch<br>
+					1330-1400 Facial trauma<br>
+					1400-1430 Dental and salivary emergencies<br>
+					1430-1500 Neurological complications of ENT emergencies<br>
+					1500-1530 Coffee<br>
+					1530-1600 Vascular Emergencies<br>
+					1600-1700 Cases and Panel discussion</p>
 			</div>
 
 			<div class = "col m4 s12">
