--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 				<p class = "light ">
 					Course fee is £50 per person<br>
 					Lunch and refreshments are included<br>
-					This course is aimed at consultants in ENT and Radiology<br>
-					Attendance provides 6 CPD credits in accordance with the CPD schemes of ENTUK and the Royal College of Radiologists
-				</p>
+					This course is aimed CT1 to consultant in ENT and Radiology<br>
+					Attendance provides 6 CPD credits in accordance with the CPD schemes of ENTUK and the Royal College of Radiologists<br>
+					Please complete and return the application form below to attend this course</p>
 			</div>
 
 		</div>
