--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<!-- end of open graph elements -->
 </head>
 <body>
-	<div class="section red"><!-- banner at top -->
+	<div class="section grey"><!-- banner at top -->
 		<div class = "container">
 			<div class="row">
 				<div class="col s12">
