--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 	<!-- end of open graph elements -->
 </head>
 <body>
-	<div class="section grey"><!-- banner at top -->
+	<div class="section grey darken-3"><!-- banner at top -->
 		<div class = "container">
 			<div class="row">
 				<div class="col s12">
-					<h1 class="header light red-text text-lighten-4 center-on-small-only">Sunderland</h1>
-					<h4 class="light red-text text-lighten-3 center-on-small-only">Head and Neck Emergency Radiology course</h4>
+					<h1 class="header light cyan-text text-lighten-4 center-on-small-only">Sunderland</h1>
+					<h4 class="light pink accent-2-text text-lighten-3 center-on-small-only">Head and Neck Emergency Radiology course</h4>
 				</div>
 			</div>
 		</div>
