--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="row">
 				<div class="col s12">
 					<h1 class="header light cyan accent-3-text text-lighten-4 center-on-small-only">Sunderland</h1>
-					<h4 class="light  grey darken-3-text text-lighten-3 center-on-small-only">Head and Neck Emergency Radiology course</h4>
+					<h4 class="light  grey -text text-lighten-3 center-on-small-only">Head and Neck Emergency Radiology course</h4>
 				</div>
 			</div>
 		</div>
