--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		<div class = "container">
 			<div class="row">
 				<div class="col s12">
-					<h1 class="header light grey-text text-cyan lighten-4 center-on-small-only">Sunderland</h1>
-					<h4 class="light  grey -text text-lighten-3 center-on-small-only">Head and Neck Emergency Radiology course</h4>
+					<h1 class="header light grey-text text-lighten-4 center-on-small-only">Sunderland</h1>
+					<h4 class="light grey-text text-lighten-3 center-on-small-only">Head and Neck Emergency Radiology course</h4>
 				</div>
 			</div>
 		</div>
