--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		<div class = "container">
 			<div class="row">
 				<div class="col s12">
-					<h1 class="header cyan-text text-cyan lighten-1 center-on-small-only">Sunderland</h1>
-					<h4 class="pink-text text-pink darken-1 center-on-small-only">Head and Neck Emergency Radiology course</h4>
+					<h1 class="header cyan-text text-cyan accent-3 center-on-small-only">Sunderland</h1>
+					<h4 class="pink-text text-pink accent-3 center-on-small-only">Head and Neck Emergency Radiology course</h4>
 				</div>
 			</div>
 		</div>
