--- a/index.html
+++ b/index.html
@@ -37,20 +37,24 @@
 					<i class = "blue-text material-icons">camera_roll</i>
 				</div>
 				<h6>A one day course for Consultants and trainees in ENT and radiology to teach you how to interpret imaging in key head and neck emergencies</h6>
-				<p class = "light">0800-0845 Registration<br>
-					0845-0900 Welcome and Introductions<br>
-					0900-0945 ENT emergencies - A Clinical perspective<br>
-					0945-1030 Pharyngeal emergencies<br>
-					1030-1100 Coffee<br>
-					1100-1145 Temporal bone emergencies<br>
-					1145-1230 Nasal and paranasal emergencies<br>
-					1230-1330 Lunch<br>
-					1330-1400 Facial trauma<br>
-					1400-1430 Dental and salivary emergencies<br>
-					1430-1500 Neurological complications of ENT emergencies<br>
-					1500-1530 Coffee<br>
-					1530-1600 Vascular Emergencies<br>
-					1600-1700 Cases and Panel discussion</p>
+				<table>
+					<tbody>
+						<tr><td>0800-0845</td><td>Registration</td></tr>
+						<tr><td0845-0900</td><td>Welcome and Introductions</td></tr>
+						<tr><td0900-0945</td><td>ENT emergencies - A Clinical perspective</td></tr>
+						<tr><td0945-1030</td><td>Pharyngeal emergencies</td></tr>
+						<tr><td1030-1100</td><td>Coffee</td></tr>
+						<tr><td1100-1145</td><td>Temporal bone emergencies</td></tr>
+						<tr><td1145-1230</td><td>Nasal and paranasal emergencies</td></tr>
+						<tr><td1230-1330</td><td>Lunch</td></tr>
+						<tr><td1330-1400</td><td>Facial trauma</td></tr>
+						<tr><td1400-1430</td><td>Dental and salivary emergencies</td></tr>
+						<tr><td1430-1500</td><td>Neurological complications of ENT emergencies</td></tr>
+						<tr><td1500-1530</td><td>Coffee</td></tr>
+						<tr><td1530-1600</td><td>Vascular Emergencies</td></tr>
+						<tr><td1600-1700</td><td> Cases and Panel discussion</td></tr>
+					</tbody>
+				</table>
 			</div>
 
 			<div class = "col m3 s12">
@@ -61,7 +65,7 @@
 				<p class = "light">
 					<i class = "tiny material-icons left">schedule</i>0800 - 1700<br>
 					<i class = "tiny material-icons left">room</i><a href = "https://goo.gl/maps/Viaoh4mJ2RT2">Education Center, Sunderland Royal Hospital, Kayll Road, SR4 7TP</a><br>
-					<i class = "tiny material-icons left">email</i><a href = "mailto:SRHRadiologycourse@gmail.com">SRHRadiologycourse@gmail.com</a><br>
+					<i class = "tiny material-icons left">email</i><a href = "mailto:SRHRadiologycourse@gmail.com">Email</a><br>
 				</p>
 			</div>
 
