--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
 				<table>
 					<tbody>
 						<tr><td>0800-0845</td><td>Registration</td></tr>
-						<tr><td0845-0900</td><td>Welcome and Introductions</td></tr>
-						<tr><td0900-0945</td><td>ENT emergencies - A Clinical perspective</td></tr>
-						<tr><td0945-1030</td><td>Pharyngeal emergencies</td></tr>
-						<tr><td1030-1100</td><td>Coffee</td></tr>
-						<tr><td1100-1145</td><td>Temporal bone emergencies</td></tr>
-						<tr><td1145-1230</td><td>Nasal and paranasal emergencies</td></tr>
-						<tr><td1230-1330</td><td>Lunch</td></tr>
-						<tr><td1330-1400</td><td>Facial trauma</td></tr>
-						<tr><td1400-1430</td><td>Dental and salivary emergencies</td></tr>
-						<tr><td1430-1500</td><td>Neurological complications of ENT emergencies</td></tr>
-						<tr><td1500-1530</td><td>Coffee</td></tr>
-						<tr><td1530-1600</td><td>Vascular Emergencies</td></tr>
-						<tr><td1600-1700</td><td> Cases and Panel discussion</td></tr>
+						<tr><td>0845-0900</td><td>Welcome and Introductions</td></tr>
+						<tr><td>0900-0945</td><td>ENT emergencies - A Clinical perspective</td></tr>
+						<tr><td>0945-1030</td><td>Pharyngeal emergencies</td></tr>
+						<tr><td>1030-1100</td><td>Coffee</td></tr>
+						<tr><td>1100-1145</td><td>Temporal bone emergencies</td></tr>
+						<tr><td>1145-1230</td><td>Nasal and paranasal emergencies</td></tr>
+						<tr><td>1230-1330</td><td>Lunch</td></tr>
+						<tr><td>1330-1400</td><td>Facial trauma</td></tr>
+						<tr><td>1400-1430</td><td>Dental and salivary emergencies</td></tr>
+						<tr><td>1430-1500</td><td>Neurological complications of ENT emergencies</td></tr>
+						<tr><td>1500-1530</td><td>Coffee</td></tr>
+						<tr><td>1530-1600</td><td>Vascular Emergencies</td></tr>
+						<tr><td>1600-1700</td><td>Cases and Panel discussion</td></tr>
 					</tbody>
 				</table>
 			</div>
