--- a/index.html
+++ b/index.html
@@ -37,24 +37,20 @@
 					<i class = "blue-text material-icons">camera_roll</i>
 				</div>
 				<h6>A one day course for Consultants and trainees in ENT and radiology to teach you how to interpret imaging in key head and neck emergencies</h6>
-				<table>
-					<tbody>
-						<tr><td>0800-0845</td><td>Registration</td></tr>
-						<tr><td>0845-0900</td><td>Welcome and Introductions</td></tr>
-						<tr><td>0900-0945</td><td>ENT emergencies - A Clinical perspective</td></tr>
-						<tr><td>0945-1030</td><td>Pharyngeal emergencies</td></tr>
-						<tr><td>1030-1100</td><td>Coffee</td></tr>
-						<tr><td>1100-1145</td><td>Temporal bone emergencies</td></tr>
-						<tr><td>1145-1230</td><td>Nasal and paranasal emergencies</td></tr>
-						<tr><td>1230-1330</td><td>Lunch</td></tr>
-						<tr><td>1330-1400</td><td>Facial trauma</td></tr>
-						<tr><td>1400-1430</td><td>Dental and salivary emergencies</td></tr>
-						<tr><td>1430-1500</td><td>Neurological complications of ENT emergencies</td></tr>
-						<tr><td>1500-1530</td><td>Coffee</td></tr>
-						<tr><td>1530-1600</td><td>Vascular Emergencies</td></tr>
-						<tr><td>1600-1700</td><td>Cases and Panel discussion</td></tr>
-					</tbody>
-				</table>
+ 				<p class = "light">0800-0845 Registration<br>
+ 					0845-0900 Welcome and Introductions<br>
+ 					0900-0945 ENT emergencies - A Clinical perspective<br>
+ 					0945-1030 Pharyngeal emergencies<br>
+ 					1030-1100 Coffee<br>
+ 					1100-1145 Temporal bone emergencies<br>
+ 					1145-1230 Nasal and paranasal emergencies<br>
+ 					1230-1330 Lunch<br>
+ 					1330-1400 Facial trauma<br>
+ 					1400-1430 Dental and salivary emergencies<br>
+ 					1430-1500 Neurological complications of ENT emergencies<br>
+ 					1500-1530 Coffee<br>
+ 					1530-1600 Vascular Emergencies<br>
+  					1600-1700 Cases and Panel discussion</p>
 			</div>
 
 			<div class = "col m3 s12">
