--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 					<h4 class="pink-text text-pink accent-3 center-on-small-only">Head and Neck Emergency Radiology course</h4>
 				</div>
 			</div>
+			<h4 class="pink-text text-pink accent-3 center-on-small-only">Head and Neck Emergency Radiology course</h4>
 		</div>
 	</div>
 	<br>
