--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
 	</div>
 	<br>
 	<br>
-	<h4 class="pink-text text-pink accent-3 center-on-small-only">Head and Neck Emergency Radiology course</h4>
+<body>
+	<div class="section transparent"><!-- banner at top -->
+		<div class = "container">
+			<div class="row">
+				<div class="col s12">
+					<h1 class="header green-text text-green darken-1 center-on-small-only">Sunderland</h1>
 	<div class = "container">
 		<div class = "row">
 			<div class = "col m6 s12">
