--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
 	<div class="section transparent"><!-- banner at top -->
 		<div class = "container">
 			<div class="row">
-				<div class="col s12">
-					<h1 class="header green-text text-green darken-1 center-on-small-only">Sunderland</h1>
+				<div class="col s6">
+					<h6 class="header green-text text-green darken-1 center-on-small-only">A one day course for Consultants and trainees in ENT and radiology to teach you how to interpret imaging in key head and neck emergencies</h6>
 	<div class = "container">
 		<div class = "row">
 			<div class = "col m6 s12">
 				<div class = "center">
 					<i class = "blue-text material-icons">camera_roll</i>
 				</div>
-				<h6>A one day course for Consultants and trainees in ENT and radiology to teach you how to interpret imaging in key head and neck emergencies</h6>
+				<h6>Programme</h6>
  				<p class = "light">0800-0845 Registration<br>
  					0845-0900 Welcome and Introductions<br>
  					0900-0945 ENT emergencies - A Clinical perspective<br>
