--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
 			<div class="row">
 				<div class="col s12">
 					<h6 class="header green-text text-green darken-1 center-on-small-only">A one day course for Consultants and trainees in ENT and radiology to teach you how to interpret imaging in key head and neck emergencies</h6>
+					</div>
+			</div>
+		</div>
+	</div>
+	<br>
+	<br>
 	<div class = "container">
 		<div class = "row">
 			<div class = "col m6 s12">
