--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!-- this is to make the link look nice when shared, e.g. WhatsApp, Facebook -->
 	<meta property="og:site_name" content="SRH Head and Neck Emergency Radiology course">
 	<meta property="og:title" content="SRH Head and Neck Emergency Radiology course" />
-	<meta property="og:description" content="A One day course for Consultants and trainees in ENT and Radiology to learn to interptet imaging " />
+	<meta property="og:description" content="A One day course aimed at Consultants and Trainees in ENT and Radiology to learn to interptet imaging in ENT emergencies " />
 	<meta property="og:image" itemprop="image" content="http://srhradiologycourse.com/assets/img/smallsquarelogo.jpg">
 	<meta property="og:url" content="http://srhradiologycourse.com/" />
 	<meta property="og:type" content="website" />
@@ -35,12 +35,11 @@
 		<div class = "container">
 			<div class="row">
 				<div class="col s12">
-					<h6 class="header green-text text-green darken-1 center-on-small-only">A one day course for Consultants and trainees in ENT and radiology to teach you how to interpret imaging in key head and neck emergencies</h6>
+					<h6 class="header green-text text-green darken-1 center-on-small-only">A one day course aimed at Consultants and Trainees in ENT and Radiology to teach you how to interpret imaging in key head and neck emergencies</h6>
 					</div>
 			</div>
 		</div>
 	</div>
-	<br>
 	<br>
 	<div class = "container">
 		<div class = "row">
