--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<div class="row">
 				<div class="col s12">
 					<h6 class="header green-text text-green darken-1 center-on-small-only">A one day course aimed at Consultants and Trainees in ENT and Radiology to teach you how to interpret imaging in key head and neck emergencies</h6>
-					</div>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -45,10 +45,11 @@
 		<div class = "row">
 			<div class = "col m6 s12">
 				<div class = "center">
-					<i class = "blue-text material-icons">camera_roll</i>
+					<i class = "blue-text material-icons">list</i>
 				</div>
 				<h6>Programme</h6>
- 				<p class = "light">0800-0845 Registration<br>
+ 				<p class = "light">
+					0800-0845 Registration<br>
  					0845-0900 Welcome and Introductions<br>
  					0900-0945 ENT emergencies - A Clinical perspective<br>
  					0945-1030 Pharyngeal emergencies<br>
@@ -61,7 +62,8 @@
  					1430-1500 Neurological complications of ENT emergencies<br>
  					1500-1530 Coffee<br>
  					1530-1600 Vascular Emergencies<br>
-  					1600-1700 Cases and Panel discussion</p>
+  					1600-1700 Cases and Panel discussion
+				</p>
 			</div>
 
 			<div class = "col m3 s12">
@@ -101,9 +103,13 @@
 
 		</div>
 	</div>
-	<div class = "center">
-		<a class="waves-effect waves-light btn" href = "/assets/pdf/poster4.pdf"><i class="material-icons left">description</i>Download poster</a>
-		<a class="waves-effect waves-light btn" href = "/assets/Application form Sept 2017.doc"><i class="material-icons left">description</i>Download Application form</a>
+	<div class = "row center">
+		<div class = "col s6">
+			<a class="waves-effect waves-light btn" href = "/assets/pdf/poster4.pdf"><i class="material-icons left">description</i>Download poster</a>
+		</div>
+		<div class = "col s6">
+			<a class="waves-effect waves-light btn" href = "/assets/Application form Sept 2017.doc"><i class="material-icons left">description</i>Download Application form</a>
+		</div>
 	</div>
 	<br>
 	<br>
