--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 	</div>
 	<div class = "row center">
 		<div class = "col s6">
-			<a class="waves-effect waves-light btn" href = "/assets/pdf/poster4.pdf"><i class="material-icons left">description</i>Download poster</a>
+			<a class="waves-effect waves-light btn" href = "/assets/pdf/poster4.pdf"><i class="material-icons left">description</i>Poster</a>
 		</div>
 		<div class = "col s6">
-			<a class="waves-effect waves-light btn" href = "/assets/Application form Sept 2017.doc"><i class="material-icons left">description</i>Download Application form</a>
+			<a class="waves-effect waves-light btn" href = "/assets/Application form Sept 2017.doc"><i class="material-icons left">description</i>Application form</a>
 		</div>
 	</div>
 	<br>
