--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 		<div class = "row">
 			<div class = "col m6 s12">
 				<div class = "center">
-					<i class = "blue-text material-icons">graduation_cap</i>
+					<i class = "blue-text material-icons">record_voice
+					_over</i>
 				</div>
 				<h6>Programme</h6>
  				<p class = "light">
