--- a/index.html
+++ b/index.html
@@ -104,12 +104,8 @@
 		</div>
 	</div>
 	<div class = "row center">
-		<div class = "col s12">
-			<a class="waves-effect waves-light btn" href = "/assets/pdf/poster4.pdf"><i class="material-icons left">description</i>Poster</a>
-		</div>
-		<div class = "col s12">
+			<a class="waves-effect waves-light btn" href = "/assets/pdf/poster4.pdf"><i class="material-icons left">description</i>Poster</a>&nbsp;
 			<a class="waves-effect waves-light btn" href = "/assets/Application form Sept 2017.doc"><i class="material-icons left">description</i>Application form</a>
-		</div>
 	</div>
 	<br>
 	<br>
