--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 	</div>
 	<div class = "row center">
 			<a class="waves-effect waves-light btn" href = "/assets/pdf/poster4.pdf"><i class="material-icons left">description</i>Poster</a>
-		<div class = "clearfix">&nbsp;</div>
+		<p>&nbsp;</p>
 			<a class="waves-effect waves-light btn" href = "/assets/Application form Sept 2017.doc"><i class="material-icons left">description</i>Application form</a>
 	</div>
 	<br>
