--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
 		</div>
 	</div>
 	<div class = "row center">
-			<a class="waves-effect waves-light btn" href = "/assets/pdf/poster4.pdf"><i class="material-icons left">description</i>Poster</a>
-			<a class="waves-effect waves-light btn" href = "/assets/Application form Sept 2017.doc"><i class="material-icons left">description</i>Application form</a>
+		<a class="waves-effect waves-light btn" href = "/assets/pdf/poster4.pdf"><i class="material-icons left">description</i>Poster</a>
+		<div class = "hide-on-med-and-up clearfix">&nbsp;</div>	
+		<a class="waves-effect waves-light btn" href = "/assets/Application form Sept 2017.doc"><i class="material-icons left">description</i>Application form</a>
 	</div>
 	<br>
 	<br>
